# blocksign

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  REQUIREMENTS.md  THREAT_MODEL.md
.github/workflows/: deploy.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 001_initial_schema.sql  002_add_security_tables.sql
backend/src/: config.rs  main.rs  state.rs
backend/src/db/: migrations.rs  mod.rs  models.rs  pool.rs
backend/src/db/repositories/: audit_log.rs  document.rs  mod.rs  nonce.rs  rate_limit.rs  security_event.rs  signature.rs  verification.rs  wallet.rs
backend/src/handlers/: audit.rs  blockchain.rs  documents.rs  health.rs  mod.rs  transaction.rs  upload.rs
backend/src/models/: error.rs  mod.rs  upload.rs
backend/src/services/: blockchain.rs  hash_validator.rs  hashing.rs  mod.rs  nonce.rs  rate_limiter.rs  security_logger.rs  storage.rs
backend/src/utils/: file_validator.rs  mod.rs
contracts/: .env.example  .gas-snapshot  DEPLOYMENT.md  README.md  foundry.toml  lcov.info
contracts/script/: Deploy.s.sol
contracts/src/: BlockSign.sol
contracts/test/: BlockSign.t.sol
frontend/: angular.json  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.html  app.routes.ts  app.ts
frontend/src/app/core/models/: api.model.ts  document.model.ts  index.ts  transaction.model.ts  wallet.model.ts
frontend/src/app/layout/: layout.component.ts
frontend/src/environments/: contract.abi.ts  environment.production.ts  environment.ts
frontend/src/types/: canvas-confetti.d.ts
(+41 files in other folders)
